--- a/app/globals.css
+++ b/app/globals.css
@@ -19,12 +19,43 @@
 body {
   overflow-x: hidden;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+  background: #ffffff;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 0s 600000s, color 0s 600000s !important;
+}
+
+.card.image-full:before {
+  background-color: transparent !important;
+}
+
+.card-gradient {
+  background-image: linear-gradient(transparent 0%, #2b3e27 100%);
+  border-radius: 1rem;
+}
+
+.swiper-button-next,
+.swiper-container-rtl .swiper-button-prev,
+.swiper-button-prev,
+.swiper-container-rtl .swiper-button-next {
+  background-image: none !important;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: #ffffff;
+}
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  font-size: 2rem;
 }
 
 @layer utilities {
